tests/paczka1/fuzzy1/97173273.err
Error in line 6: nEgh9dO A791 71,3
Error in line 4: LZ147 S378 88,1
Error in line 12: LZ147 A791 45,3
Error in line 15: LZ147 S293 8,1
Error in line 16: LZ147 S378 73,0
Error in line 14: ds13A2i S293 42,7
Error in line 19: S177 S378 61,5
Error in line 25: ds13A2i A791 72,9
